--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       <div class="spinner"></div>
       <p>Redirecting...</p>
     </div>
+    <div class="url">
+      <p>If its not redirecting you automatically, <a href="#" id="link">Please click here to go the new site</a></p>
+    </div>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
